test/runtime-integration-tests/TestPrograms/Syntax/Invalid/mismatched_brackets.5th
main(): int { arr: int[10; return 0; }
